Use etcd3gw tooz driver everywhere in Antelope
etcd3 driver in tooz is deprecated as the underlying etcd3 Python
library is no longer maintained.

Related-Issue: PRODX-34839
Change-Id: Ic40855d1b64422178a767335edae7c9a1885f16f

--- a/openstack_controller/templates/services/alarming.yaml
+++ b/openstack_controller/templates/services/alarming.yaml
@@ -49,9 +49,13 @@ spec:
             gnocchi_external_project_owner: service
             gnocchi_external_domain_name: service
           coordination:
+{%- if spec.openstack_version in ("antelope",) %}
+            backend_url: {{ get_etcd3_endpoint(spec.openstack_version, 'etcd3gw') }}
+{%- else %}
             #There are some problems with etcd3+http driver so we shouldn't use it
             #BUG: https://mirantis.jira.com/browse/PRODX-21784
             backend_url: {{ get_etcd3_endpoint(spec.openstack_version, 'etcd3') }}
+{%- endif %}
           keystone_authtoken:
             memcache_security_strategy: ENCRYPT
             memcache_secret_key: {{ credentials[0].memcached }}
