Pass OpenStackVersion enum class to templates
using `OSVer` shorthand, this allows for much more readable
checks for OpenStack version, for example:

for "Yoga or newer", a very long and explicit line like
```
if spec.openstack_version not in ["queens", ..., "xena"]
```
becomes
```
OSVer.yoga <= OSVer[spec.openstack_version]
```
or the following for "Yoga or newer but not master"
```
if spec.openstack_version in openstack_versions[openstack_versions.index("yoga"):-1]
```
becomes
```
OSVer.yoga <= OSVer[spec.openstack_version] < OSVer.master
```

Couple of places in templates changed to showcase the better
readability. Further changes will be done in followup patches.

Related-Issue: PRODX-3456
Change-Id: I72b7bc7bf68cf29d4dba47ad74c58db1bf2b34f7

--- a/openstack_controller/templates/services/tempest.yaml
+++ b/openstack_controller/templates/services/tempest.yaml
@@ -157,7 +157,7 @@ spec:
             --gateway 10.20.40.1 \
             --network tempest-fixed-net
 {%- endif %}
-{%- if spec.openstack_version not in ['queens', 'rocky', 'stein', 'train', 'ussuri', 'victoria', 'wallaby', 'xena'] %}
+{%- if OSVer.yoga <= OSVer[spec.openstack_version] %}
 {%- raw %}
           {{- if not .Values.conf.tempest.DEFAULT.production }}
           function ensure_tld_present {
@@ -174,7 +174,7 @@ spec:
           project_count: 25
           project_count_with_network: 10
           project_count_without_network: 15
-          {%- if spec.openstack_version not in ['queens', 'rocky', 'stein', 'train', 'ussuri', 'victoria', 'wallaby', 'xena'] %}
+          {%- if OSVer.yoga <= OSVer[spec.openstack_version] %}
           create_reader_user: true
           {%- endif %}
           user_count: 3
@@ -185,7 +185,7 @@ spec:
 {%- endif %}
           identity:
 # turn on option for versions starting from yoga besides master
-{%- if spec.openstack_version in openstack_versions[openstack_versions.index('yoga'):-1] %}
+{%- if OSVer.yoga <= OSVer[spec.openstack_version] < OSVer.master %}
             default_domain_id: tempest
 {%- else %}
             default_domain_id: Default
