--- a/openstack_controller/templates/services/key-manager.yaml
+++ b/openstack_controller/templates/services/key-manager.yaml
@@ -58,7 +58,7 @@ spec:
           keystone_authtoken:
             memcache_security_strategy: ENCRYPT
             memcache_secret_key: {{ credentials[0].memcached }}
-            {%- if spec.openstack_version not in ("queens", "rocky", "stein") %}
+            {%- if OSVer.train <= OSVer[spec.openstack_version] %}
             service_type: key-manager
             {%- endif %}
 {%- if cadf_audit.enabled %}
