--- a/tox.ini
+++ b/tox.ini
@@ -93,5 +93,21 @@ commands =
     find {toxinidir}/openstack_controller -type f -name '*.pyc' -delete
     bash {toxinidir}/tools/run-compose.sh {posargs:up}
 
+[testenv:functional]
+# NOTE(vsaienko): Running tests require
+# - kubeconfig
+# - clouds.yaml will be filled automatically
+# - access to kubernetes services internal IPs
+# - resolution for DNS names of kubernetes services
+changedir =  {toxinidir}/openstack_controller/tests
+setenv =
+  OS_CLIENT_CONFIG_FILE=/tmp/clouds_functional.yaml
+  OS_CLOUD=admin
+commands =
+    bash {toxinidir}/tools/get_service_account.sh
+    bash {toxinidir}/tools/fill_internal_svc_ips.sh
+    bash {toxinidir}/tools/get_os_clouds.sh
+    pytest  {posargs}
+
 [flake8]
 extend-ignore = E,W
