[designate] Add metadata for pool-manage job
* Add images mapping
* Add job child object

Related-Prod: PRODX-34792
Related-Prod: PRODX-34841
Change-Id: Id73b985dac83b8406e416c8d51f07030f884137e

--- a/openstack_controller/templates/services/dns.yaml
+++ b/openstack_controller/templates/services/dns.yaml
@@ -98,6 +98,8 @@ spec:
     "designate_worker",
     "designate_central",
     "powerdns",
+    "designate_pool_manage",
+    "designate_pool_manage_hash",
     "powerdns_db_sync",] %}
         {%- if image in images %}
           {{ image }}: {{ images[image] }}
