--- a/tests/fixtures/render_service_template/input/ussuri_ceph_local_non_dvr_local_proxy/context_template_args.yaml
+++ b/tests/fixtures/render_service_template/input/ussuri_ceph_local_non_dvr_local_proxy/context_template_args.yaml
@@ -39,6 +39,8 @@ images:
   designate_producer: designate-producer:latest
   designate_sink: designate-sink:latest
   designate_worker: designate-worker:latest
+  designate_pool_manage: designate-pool-manage:latest
+  designate_pool_manage_hash: designate-pool-manage-hash:latest
   entrypoint: entrypoint:latest
   error_pages: error-pages:latest
   etcd: etcd:latest
