--- a/tests/fixtures/render_service_template/output/dns/yoga_ceph_local_non_dvr.yaml
+++ b/tests/fixtures/render_service_template/output/dns/yoga_ceph_local_non_dvr.yaml
@@ -203,6 +203,8 @@ spec:
           powerdns: powerdns:latest
           powerdns_db_sync: powerdns-db-sync:latest
           rabbit_init: rabbit-init:latest
+          designate_pool_manage: designate-pool-manage:latest
+          designate_pool_manage_hash: designate-pool-manage-hash:latest
       jobs:
         ks_endpoints:
           restartPolicy: Never
