Use strict affinitiy for etcd
Related-Prod: PRODX-34342
Change-Id: I9d885244a82f1e46fe033a9b999af5ba349f52d8

--- a/openstack_controller/templates/services/coordination.yaml
+++ b/openstack_controller/templates/services/coordination.yaml
@@ -24,6 +24,10 @@ spec:
       pod:
         replicas:
           etcd: 3
+        affinity:
+          anti:
+            type:
+              default: requiredDuringSchedulingIgnoredDuringExecution
       volume:
         class_name: {{ spec.get('local_volume_storage_class', 'openstack-operator-bind-mounts') }}
 
