--- a/tests/fixtures/render_service_template/output/coordination/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/coordination/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -16,5 +16,9 @@ spec:
       pod:
         replicas:
           etcd: 3
+        affinity:
+          anti:
+            type:
+              default: requiredDuringSchedulingIgnoredDuringExecution
       volume:
         class_name: lvp-fake-root
