--- a/etc/openstack-controller/01-controller-default.ini
+++ b/etc/openstack-controller/01-controller-default.ini
@@ -30,6 +30,9 @@ manifest_purge_delay = 10
 # The number of seconds to pause for helmbundle changes
 manifest_apply_delay = 10
 
+# The number of seconds to run for helm command
+helm_cmd_timeout = 120
+
 [maintenance]
 # number of instances to migrate concurrently
 instance_migrate_concurrency = 1
