Provide CA for the TLS proxy service
Related-Prod: PRODX-35064
Change-Id: I876f893920340b68b539209cea2a25bf1f882c73

--- a/openstack_controller/templates/services/ingress.yaml
+++ b/openstack_controller/templates/services/ingress.yaml
@@ -73,6 +73,8 @@ spec:
           host_fqdn_override:
             public:
               tls:
+                ca: |
+{{ spec.features.ssl.public_endpoints.ca_cert | indent( width=18, first=True) }}
                 crt: |
 {{ spec.features.ssl.public_endpoints.api_cert | indent( width=18, first=True) }}
                 key: |
