--- a/tests/fixtures/render_service_template/output/ingress/ussuri_ceph_local_non_dvr.yaml
+++ b/tests/fixtures/render_service_template/output/ingress/ussuri_ceph_local_non_dvr.yaml
@@ -23,6 +23,8 @@ spec:
           host_fqdn_override:
             public:
               tls:
+                ca: |
+                  TEST CA
                 crt: |
                   TEST CRT
                 key: |
