Using generated rabbitmq guest password
Using guest password for rabbitmq credential genereated randomly
by openstack-controller.

Related-PRODX: PRODX-34578
Change-Id: I1e9a0b94b086ee8f0d81506aa32df0ac49500668

--- a/openstack_controller/templates/services/messaging.yaml
+++ b/openstack_controller/templates/services/messaging.yaml
@@ -209,6 +209,8 @@ spec:
             user:
               username: {{ admin_creds.messaging.username }}
               password: {{ admin_creds.messaging.password }}
+            guest:
+              password: {{ guest_creds.password }}
           statefulset:
             replicas: 1
             name: openstack-rabbitmq-rabbitmq
