--- a/tests/fixtures/render_service_template/output/messaging/ussuri_ceph_local_non_dvr.yaml
+++ b/tests/fixtures/render_service_template/output/messaging/ussuri_ceph_local_non_dvr.yaml
@@ -399,6 +399,8 @@ spec:
             user:
               password: 2tnAuP0j9MsgaVHErehZkC5HCK3ZxYLr
               username: rabbitmq
+            guest:
+              password: 7TnAuP0dKMsgaVHErehZkC5HCK3ZxOi4
           hosts:
             default: rabbitmq
           path: /openstack
