Explicitly disable cinder-backup service in config
works for Yoga and newer

Depends-On: I40510f88f7873c6a7b584cd9bc0911f325e28439
Related-Issue: PRODX-32415
Change-Id: I71e4f52deca9227d04172495e2f5d36e11fc29c0

--- a/openstack_controller/templates/services/block-storage.yaml
+++ b/openstack_controller/templates/services/block-storage.yaml
@@ -255,6 +255,8 @@ spec:
             backup_driver: cinder.backup.drivers.nfs.NFSBackupDriver
             backup_share: {{ main_backup_driver["backup_share"] }}
   {%- endif %}
+{%- elif spec.openstack_version not in ("queens", "rocky", "stein", "train", "ussuri", "victoria", "wallaby", "xena") %}
+            backup_api_class: cinder.backup.api.NoOp
 {%- endif %}
             control_exchange: cinder
 {%- if is_ceph_enabled %}
