--- a/openstack_controller/templates/child_objects/identity.yaml
+++ b/openstack_controller/templates/child_objects/identity.yaml
@@ -5,6 +5,9 @@ keystone:
       images:
       - keystone_api
       manifest: deployment_api
+      pod_labels:
+        application: keystone
+        component: api
   Job:
     keystone-bootstrap:
       hash_fields:
