Network policies support initial
The patch adds resource_view and initial support of network policies generation.
The policies itself are not implmented by this patch, only test policy for
neutron rabbitmq is added.

Related-Prod: PRODX-34784
Change-Id: I27703264a4406ec4cdd5d7908ac01c0ff2c79d39

--- a/charts/openstack-operator/templates/openstack-controller.yaml
+++ b/charts/openstack-operator/templates/openstack-controller.yaml
@@ -106,6 +106,8 @@ spec:
               value: '{{ toJson .Values.iam }}'
             - name: OSCTL_PROXY_DATA
               value: '{{ toJson .Values.global.proxy }}'
+            - name: OSCTL_POD_NETWORKS_DATA
+              value: '{{ toJson .Values.global.podNetworks }}'
 {{ tuple . | include "openstack-controller.common_env" | indent 12 }}
           livenessProbe:
             exec:
