--- a/charts/openstack-operator/values.yaml
+++ b/charts/openstack-operator/values.yaml
@@ -8,6 +8,8 @@ global:
   helmBaseUrl: https://binary.mirantis.com
   proxy:
     enabled: false
+  # podNetworks:
+  # - cidr: 172.17.0.0/16
 
 replicaCount: 1
 
