--- a/tox.ini
+++ b/tox.ini
@@ -79,6 +79,12 @@ commands =
     find {toxinidir}/openstack_controller -type f -name '*.pyc' -delete
     bash {toxinidir}/tools/run_with_service_account.sh
 
+[testenv:network-policies-update]
+deps =
+    .
+commands =
+    {basepython} {toxinidir}/tools/regenerate_policy_outputs.py
+
 [testenv:compose]
 basepython=python3
 deps = {[testenv:dev]deps}
