--- a/tests/fixtures/render_service_template/input/common_template_args.yaml
+++ b/tests/fixtures/render_service_template/input/common_template_args.yaml
@@ -223,3 +223,12 @@ proxy_vars:
 proxy_settings: {}
 credentials_secret_name: keystone-credential-data
 fernet_secret_name: keystone-fernet-data
+network_policies:
+  ingress:
+    database:mariadb:StatefulSet:mariadb-server:
+      - from:
+        - default: selector
+    networking:rabbitmq:StatefulSet:openstack-neutron-rabbitmq-rabbitmq:
+      - from:
+        - default: selector
+  egress: {}
