--- a/tox.ini
+++ b/tox.ini
@@ -100,6 +100,8 @@ commands =
 # - access to kubernetes services internal IPs
 # - resolution for DNS names of kubernetes services
 changedir =  {toxinidir}/openstack_controller/tests
+passenv =
+    KUBECONFIG
 setenv =
   OS_CLIENT_CONFIG_FILE=/tmp/clouds_functional.yaml
   OS_CLOUD=admin
