Do not add nova placement object since stein
Related-Prod: PRODX-35161
Change-Id: Idf8ac74af1205b0ecab40d2f8bb30e2df41e8e89

--- a/openstack_controller/templates/child_objects/compute.yaml
+++ b/openstack_controller/templates/child_objects/compute.yaml
@@ -1,17 +1,4 @@
 nova:
-  Ingress:
-    placement:
-      manifest: ingress_placement
-      images: []
-      hash_fields: []
-  Deployment:
-    nova-placement-api:
-      images: []
-      manifest: deployment_placement
-      hash_fields: []
-      pod_labels:
-        application: nova
-        component: placement
   Job:
     nova-bootstrap:
       hash_fields:
@@ -78,6 +65,7 @@ nova:
       images:
       - ks_user
       manifest: job_ks_user
+{%- if spec.openstack_version not in ['queens', 'rocky'] %}
     placement-ks-endpoints:
       images:
       - ks_endpoints
@@ -108,6 +96,20 @@ nova:
       images: []
       manifest: service_placement
       hash_fields: []
+  Ingress:
+    placement:
+      manifest: ingress_placement
+      images: []
+      hash_fields: []
+  Deployment:
+    nova-placement-api:
+      images: []
+      manifest: deployment_placement
+      hash_fields: []
+      pod_labels:
+        application: nova
+        component: placement
+{%- endif %}
 rabbitmq:
   Job:
     openstack-nova-rabbitmq-cluster-wait:
