Add more items to baremetal child object
Adding absent items which create pods

Related-Prod: PRODX-34784
Change-Id: Icee8baf390eb3559a4d0cbbccf15f74cce0060d4

--- a/openstack_controller/templates/child_objects/baremetal.yaml
+++ b/openstack_controller/templates/child_objects/baremetal.yaml
@@ -1,4 +1,15 @@
 ironic:
+  Deployment:
+    ironic-api:
+      hash_fields: []
+      images:
+      - ironic_retrieve_swift_config
+      - ironic_retrieve_networks
+      - ironic_api
+      manifest: deployment_api
+      pod_labels:
+        application: ironic
+        component: api
   Job:
     ironic-bootstrap:
       hash_fields:
@@ -7,51 +18,92 @@ ironic:
       images:
       - bootstrap
       manifest: job_bootstrap
+      pod_labels:
+        application: ironic
+        component: bootstrap
     ironic-db-drop:
       hash_fields:
       - endpoints.oslo_db.*
       images:
       - db_drop
       manifest: job_db_drop
+      pod_labels:
+        application: ironic
+        component: db-drop
     ironic-db-init:
       hash_fields:
       - endpoints.oslo_db.*
       images:
       - db_init
       manifest: job_db_init
+      pod_labels:
+        application: ironic
+        component: db-init
     ironic-db-sync:
       hash_fields:
       - endpoints.oslo_db.*
       images:
       - ironic_db_sync
       manifest: job_db_sync
+      pod_labels:
+        application: ironic
+        component: db-sync
     ironic-ks-endpoints:
       hash_fields: []
       images:
       - ks_endpoints
       manifest: job_ks_endpoints
+      pod_labels:
+        application: ironic
+        component: ks-endpoints
     ironic-ks-service:
       hash_fields: []
       images:
       - ks_service
       manifest: job_ks_service
+      pod_labels:
+        application: ironic
+        component: ks-service
     ironic-ks-user:
       hash_fields:
       - endpoints.*
       images:
       - ks_user
       manifest: job_ks_user
+      pod_labels:
+        application: ironic
+        component: ks-user
     ironic-manage-networks:
       hash_fields: []
       images:
       - ironic_manage_networks
       manifest: job_manage_networks
+      pod_labels:
+        application: ironic
+        component: manage-networks
     ironic-update-nodes-metadata:
       hash_fields:
       - conf.nodes.*
       images:
       - ironic_update_nodes_metadata
       manifest: job_update_nodes_metadata
+      pod_labels:
+        application: ironic
+        component: update-nodes-metadata
+  StatefulSet:
+    ironic-conductor:
+      hash_fields: []
+      images:
+      - ironic_pxe_init
+      - ironic_conductor
+      - ironic_retrieve_swift_config
+      - ironic_retrieve_networks
+      - ironic_pxe
+      - ironic_pxe_http
+      manifest: statefulset_conductor
+      pod_labels:
+        application: ironic
+        component: conductor
 rabbitmq:
   Job:
     openstack-ironic-rabbitmq-cluster-wait:
